@@ -35,7 +35,7 @@ public class JwtTokenAdminInterceptor implements HandlerInterceptor {
     public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception {
         
         // 测试当前线程的id
-        System.out.println(Thread.currentThread().threadId());
+        System.out.println(Thread.currentThread().getId());
         
         
         //判断当前拦截到的是Controller的方法还是其他资源
